@@ -120,6 +120,7 @@
             WAIT! The server is down, so if you import your pulls now it wont get uploaded to global stats :(
 			Don't worry, I'm already aware and am looking into it right now so it'll be back up soon :)
         </div>
+        <div class="importing" style="display: none">Importing...</div>
         <div class="js-import-result"></div>
         <div class="import-wrapper">
             <div>
@@ -135,12 +136,11 @@
                     Upload to global stats
                 </label>
             </div>
-            
-            
         </div>
+        <div>Importing into <span class="js-selected-profile"></span></div>
         
 
-        <div style="font-size: 14px">if you use android im sorry i tried but my small brain couldnt figure it out if you can get the link you can paste it here as usual and lmk your method so i can share it here :)</div>
+        <div style="font-size: 14px; margin-top: 32px;">if you use android im sorry i tried but my small brain couldnt figure it out if you can get the link you can paste it here as usual and lmk your method so i can share it here :)</div>
         
         <script type="module" src="./scripts/auto_import.js"></script>
     </body>
