@@ -1,3 +1,6 @@
+2024/02/19
+- Added multiple profiles
+
 2024/01/31
 - timekeeper.top :)
 
